--- a/examples/ex-minimal/CMakeLists.txt
+++ b/examples/ex-minimal/CMakeLists.txt
@@ -8,12 +8,24 @@ set(COMPONENTS compile-options analysis-tools)
 find_package(timemory REQUIRED COMPONENTS ${COMPONENTS})
 
 set(TIMEMORY_C_LIBRARY )
-if(TARGET timemory-c-shared)
-    set(TIMEMORY_C_LIBRARY timemory-c-shared)
-elseif(TARGET timemory-c-static)
-    set(TIMEMORY_C_LIBRARY timemory-c-static)
+if("C" IN_LIST timemory_ENABLED_LINK_LANGUAGES)
+    if("SHARED" IN_LIST timemory_ENABLED_LINK_LIBRARIES)
+        set(TIMEMORY_C_LIBRARY timemory-c-shared)
+    elseif("STATIC" IN_LIST timemory_ENABLED_LINK_LIBRARIES)
+        set(TIMEMORY_C_LIBRARY timemory-c-static)
+    endif()
 endif()
 
+set(TIMEMORY_CXX_LIBRARY )
+if("CXX" IN_LIST timemory_ENABLED_LINK_LANGUAGES)
+    if("SHARED" IN_LIST timemory_ENABLED_LINK_LIBRARIES)
+        set(TIMEMORY_CXX_LIBRARY timemory-cxx-shared)
+    elseif("STATIC" IN_LIST timemory_ENABLED_LINK_LIBRARIES)
+        set(TIMEMORY_CXX_LIBRARY timemory-cxx-static)
+    endif()
+endif()
+
+# if C library is available
 if(TIMEMORY_C_LIBRARY)
     check_c_compiler_flag("-Wno-unused-parameter" "no_unused_parameter")
     if(no_unused_parameter)
@@ -28,19 +40,26 @@ if(TIMEMORY_C_LIBRARY)
     target_link_libraries(test_c_minimal timemory-minimal-example ${TIMEMORY_C_LIBRARY})
     install(TARGETS test_c_minimal DESTINATION bin)
 
+endif()
+
+# if C stubs via CXX library are available
+if(TIMEMORY_CXX_LIBRARY)
     add_executable(test_c_minimal_library test_minimal_library.c)
     target_link_libraries(test_c_minimal_library timemory-minimal-example
-        timemory-cxx-shared ${TIMEMORY_C_LIBRARY})
+        ${TIMEMORY_CXX_LIBRARY} ${TIMEMORY_C_LIBRARY})
     install(TARGETS test_c_minimal_library DESTINATION bin)
 endif()
 
+# headers are always available
 add_executable(test_cxx_minimal test_minimal.cpp)
 target_link_libraries(test_cxx_minimal timemory-minimal-example)
 install(TARGETS test_cxx_minimal DESTINATION bin)
 
-add_executable(test_cxx_minimal_library test_minimal_library.cpp)
-target_link_libraries(test_cxx_minimal_library timemory-minimal-example timemory-cxx-shared)
-install(TARGETS test_cxx_minimal_library DESTINATION bin)
+if(TIMEMORY_CXX_LIBRARY)
+    add_executable(test_cxx_minimal_library test_minimal_library.cpp)
+    target_link_libraries(test_cxx_minimal_library timemory-minimal-example ${TIMEMORY_CXX_LIBRARY})
+    install(TARGETS test_cxx_minimal_library DESTINATION bin)
+endif()
 
 if(NOT PYTHON_EXECUTABLE)
     set(PYTHON_EXECUTABLE "/usr/bin/env python")
