Compiler ID safety + restructuring templates to skeletons + removed conditionals

--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -70,7 +70,7 @@ foreach(_SUBMODULE plotting mpi_support util ert roofline)
         configure_file(${SOURCE_DIR}/${_SUBMODULE}.py
             ${BINARY_DIR}/${_SUBMODULE}.py @ONLY)
         install(FILES ${BINARY_DIR}/${_SUBMODULE}.py
-            DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/${_SUBMODULE}/)
+            DESTINATION ${CMAKE_INSTALL_PYTHONDIR}/${_SUBMODULE}/)
     endif()
 
     # copy over the init file
@@ -78,7 +78,7 @@ foreach(_SUBMODULE plotting mpi_support util ert roofline)
         configure_file(${SOURCE_DIR}/__init__.py
             ${BINARY_DIR}/__init__.py @ONLY)
         install(FILES ${BINARY_DIR}/__init__.py
-            DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/${_SUBMODULE}/)
+            DESTINATION ${CMAKE_INSTALL_PYTHONDIR}/${_SUBMODULE}/)
     endif()
 
     # copy over the main file
@@ -86,7 +86,7 @@ foreach(_SUBMODULE plotting mpi_support util ert roofline)
         configure_file(${SOURCE_DIR}/__main__.py
             ${BINARY_DIR}/__main__.py @ONLY)
         install(FILES ${BINARY_DIR}/__main__.py
-            DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/${_SUBMODULE}/)
+            DESTINATION ${CMAKE_INSTALL_PYTHONDIR}/${_SUBMODULE}/)
     endif()
 
 endforeach()
@@ -125,7 +125,7 @@ file(WRITE ${CMAKE_BINARY_DIR}/timemory/mpi_support/mpi_cxx_info.txt "${MPI_CXX_
 
 foreach(_TYPE exe c cxx)
     install(FILES ${CMAKE_BINARY_DIR}/timemory/mpi_support/mpi_${_TYPE}_info.txt
-        DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/mpi_support)
+        DESTINATION ${CMAKE_INSTALL_PYTHONDIR}/mpi_support)
 endforeach(_TYPE exe c cxx)
 
 
@@ -135,18 +135,18 @@ endforeach(_TYPE exe c cxx)
 configure_file(${PROJECT_SOURCE_DIR}/timemory/__init__.py.in
     ${CMAKE_BINARY_DIR}/timemory/__init__.py @ONLY)
 install(FILES ${CMAKE_BINARY_DIR}/timemory/__init__.py
-    DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR})
+    DESTINATION ${CMAKE_INSTALL_PYTHONDIR})
 
 foreach(PYLIB_SUBMODULE options units signals)
     configure_file(${PROJECT_SOURCE_DIR}/timemory/${PYLIB_SUBMODULE}.py
         ${CMAKE_BINARY_DIR}/timemory/${PYLIB_SUBMODULE}.py @ONLY)
     install(FILES ${CMAKE_BINARY_DIR}/timemory/${PYLIB_SUBMODULE}.py
-        DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR})
+        DESTINATION ${CMAKE_INSTALL_PYTHONDIR})
 endforeach()
 
 # Python library target
 install(TARGETS libpytimemory
-    DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR})
+    DESTINATION ${CMAKE_INSTALL_PYTHONDIR})
 
 #----------------------------------------------------------------------------
 # Python testing
@@ -175,7 +175,7 @@ foreach(_FILE ${TEST_FILES})
 
     # install them though
     install(FILES ${CMAKE_BINARY_DIR}/timemory/tests/${_FILE}
-        DESTINATION ${TIMEMORY_INSTALL_PYTHONDIR}/tests)
+        DESTINATION ${CMAKE_INSTALL_PYTHONDIR}/tests)
 
 endforeach()
 
