--- a/source/python/tools/CMakeLists.txt
+++ b/source/python/tools/CMakeLists.txt
@@ -17,7 +17,7 @@ configure_file(${CMAKE_CURRENT_LIST_DIR}/timem.py
 
 # timem installation
 install(FILES ${PROJECT_BINARY_DIR}/pytimem
-    DESTINATION ${TIMEMORY_INSTALL_BINDIR}
+    DESTINATION ${CMAKE_INSTALL_BINDIR}
     PERMISSIONS
     OWNER_EXECUTE OWNER_READ OWNER_WRITE
     GROUP_EXECUTE GROUP_READ
