--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,14 +68,18 @@ set(LIBNAME timemory)
 # set the output directory (critical for Windows and Xcode)
 #
 foreach(_TYPE ARCHIVE LIBRARY RUNTIME)
+    set(_BIN_DIR ${CMAKE_BINARY_DIR})
+    if(NOT ${PROJECT_NAME}_MASTER_PROJECT)
+        set(_BIN_DIR ${PROJECT_BINARY_DIR})
+    endif()
     if(WIN32)
-        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/outputs/runtime)
-        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/outputs/library)
-        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/outputs/archive)
+        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${_BIN_DIR}/outputs/runtime)
+        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${_BIN_DIR}/outputs/library)
+        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${_BIN_DIR}/outputs/archive)
     else()
-        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+        set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${_BIN_DIR})
+        set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${_BIN_DIR})
+        set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${_BIN_DIR})
     endif()
 endforeach()
 
