types headers + fixed MT init + improved templates + disabled skeleton +

--- a/examples/ex-cxx-tuple/CMakeLists.txt
+++ b/examples/ex-cxx-tuple/CMakeLists.txt
@@ -5,6 +5,11 @@ project(timemory-CXX-Tuple-Example LANGUAGES C CXX)
 set(EXE_NAME test_cxx_tuple)
 set(COMPONENTS compile-options papi threading analysis-tools extern-templates)
 
+option(USE_MPI "Enable MPI" ON)
+if(USE_MPI)
+    list(APPEND COMPONENTS mpi)
+endif()
+
 option(USE_CALIPER "Enable caliper" ON)
 if(USE_CALIPER)
     list(APPEND COMPONENTS caliper)
