--- a/.travis.yml
+++ b/.travis.yml
@@ -272,12 +272,12 @@ install:
   - conda create -n pyctest python=${TRAVIS_PYTHON_VERSION} pyctest scikit-build cmake numpy matplotlib pillow
   - source activate pyctest
   - export ARGS="-SF --pyctest-model=Continuous --pyctest-site=Travis --no-py"
-  - if [ -z "${BUILD_TYPE}" ]; then BUILD_TYPE=Release ; fi
+  - if [ -z "${BUILD_TYPE}" ]; then BUILD_TYPE=RelWithDebInfo ; fi
   - if [ -z "${USE_MPI}" ]; then ARGS="${ARGS} --no-mpi"; fi
   - if [ -n "${COVERAGE}" ]; then
-    python ./pyctest-runner.py ${ARGS} --coverage -- -VV -- ${BUILD_ARGS};
+    travis_wait 20 python ./pyctest-runner.py ${ARGS} --coverage -- -VV -- ${BUILD_ARGS};
     else
-    python ./pyctest-runner.py ${ARGS} --profile=cpu --extra-optimizations -- -VV -- ${BUILD_ARGS};
+    travis_wait 20 python ./pyctest-runner.py ${ARGS} --profile=cpu -- -VV -- ${BUILD_ARGS};
     fi
   # - travis_wait 20 python ./pyctest-runner.py ${ARGS} --profile=heap
 
